# Slicer_module_ICH_segmentation

./: LICENSE  README.md
ICH_segmenter_predictions_2022_08/: CMakeLists.txt
ICH_segmenter_predictions_2022_08/ICH_SEGMENTER_2022_08/: CMakeLists.txt  ICH_SEGMENTER_2022_08.py  Test file 2022_08_11.ipynb
ICH_segmenter_predictions_2022_08/ICH_SEGMENTER_2022_08/Resources/UI/: ICH_SEGMENTER_2022_08.ui  ui_ICH_SEGMENTER_2022_08.py
